--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "uuid": "^13.0.0",
     "react-dom": "^19.2.0",
     "lucide-react": "^0.555.0",
-    "@google/genai": "^1.30.0",
     "react": "^19.2.0",
     "remark-gfm": "^4.0.1",
     "react-markdown": "^10.1.0"
@@ -21,6 +20,10 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
